--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -89,12 +89,12 @@
         <item name="android:layout_height">@dimen/secretary_head_h_235</item>
     </style>
 
+
     <style name="line_style_1">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1px</item>
-        <item name="android:background">@color/line_bg</item>
+        <item name="android:background">@color/line_bg2</item>
     </style>
-
     <style name="line_style_2">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1px</item>
