--- a/res/layout/activity_experience_search.xml
+++ b/res/layout/activity_experience_search.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_white"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
     android:paddingLeft="@dimen/l_r_35"
     android:paddingRight="@dimen/l_r_35" >
 
     <RelativeLayout
+        android:id="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:background="@color/app_white">
+        android:layout_height="wrap_content"
+        android:background="@color/app_white" >
 
         <LinearLayout
             android:id="@+id/ll_experience_login"
@@ -29,45 +29,46 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/ll_experience_login"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_top_35"
-            android:layout_marginTop="@dimen/margin_top_90"
             android:background="@drawable/search_1" />
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/rl_experience_search_card"
-        android:layout_width="@dimen/search_width"
-        android:layout_height="@dimen/search_height"
-        android:layout_marginTop="@dimen/margin_top_35"
-        android:background="@drawable/circle_edit_background" >
-
-        <LinearLayout
-            style="@style/w_wrap_h_wrap"
+        <RelativeLayout
+            android:id="@+id/rl_experience_search_card"
+            android:layout_width="@dimen/search_width"
+            android:layout_height="@dimen/search_height"
+            android:layout_below="@id/iv"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" >
+            android:background="@drawable/circle_edit_background" >
 
-            <ImageView
+            <LinearLayout
                 style="@style/w_wrap_h_wrap"
-                android:src="@drawable/search" />
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" >
 
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:id="@+id/tv_search_card"
-                style="@style/text_style_nomal_28"
-                android:text="@string/please_enter_card"
-                android:textColor="@color/app_white" />
-        </LinearLayout>
+                <ImageView
+                    style="@style/w_wrap_h_wrap"
+                    android:src="@drawable/search" />
+
+                <TextView
+                    android:id="@+id/tv_search_card"
+                    style="@style/text_style_nomal_28"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/please_enter_card"
+                    android:textColor="@color/app_white" />
+            </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/ll_bank_card_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/margin_top_130"
+        android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"        
         android:orientation="vertical" >
 
         <TextView
@@ -86,6 +87,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_top_22"
             android:text="@string/search_card_tip2_1" />
+
         <TextView
             android:id="@+id/textView2"
             style="@style/text_style_small_26"
@@ -96,17 +98,19 @@
         <View
             style="@style/line_style_2"
             android:layout_marginTop="@dimen/margin_top_22" />
+
+        <TextView
+            android:id="@+id/btn_experience_jump"
+            style="@style/text_style_small_24"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/btn_h_60"
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="@dimen/margin_top_22"
+            android:background="@drawable/main_btn_shape"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/experience_jump_now"
+            android:textColor="#939393" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_experience_jump"
-        style="@style/text_style_small_24"
-        android:layout_width="@dimen/btn_w_255"
-        android:layout_height="@dimen/btn_h_60"
-        android:layout_marginTop="@dimen/margin_top_60"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/input"
-        android:gravity="center"
-        android:text="@string/experience_jump_now" />
-
-</LinearLayout>
+</RelativeLayout>
