Yeun.zhang 2015-10-31 Commit：25处文件变化

--- a/res/layout/activity_help.xml
+++ b/res/layout/activity_help.xml
@@ -15,7 +15,8 @@
         android:dividerHeight="1px"
         android:groupIndicator="@null"
         android:listSelector="@android:color/transparent"
-        android:scrollbars="none" >
+        android:scrollbars="none" 
+        >
     </ExpandableListView>
 
 </LinearLayout>
