--- a/res/layout/activity_reset_pwd.xml
+++ b/res/layout/activity_reset_pwd.xml
@@ -44,6 +44,7 @@
             android:layout_toRightOf="@id/textView1"
             android:background="@color/app_white"
             android:password="true"
+            android:hint="设置6~16为的数字或英文"
             android:textColor="@color/text_gray1" >
 
             <requestFocus />
@@ -76,6 +77,7 @@
             android:layout_toRightOf="@id/textView2"
             android:background="@color/app_white"
             android:password="true"
+             android:hint="请保持一致"
             android:textColor="@color/text_gray1" />
     </RelativeLayout>
 
