--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,7 +21,8 @@
        <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@android:color/background_light</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowBackground">@android:color/holo_green_light</item>
     </style>
     
     
