--- a/res/layout/city_choose_dialog.xml
+++ b/res/layout/city_choose_dialog.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <com.android.pc.ioc.view.WheelView
+            <kankan.wheel.widget.WheelView
                 android:id="@+id/wv_wheelcity_country"
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
@@ -43,14 +43,14 @@
                 android:layout_weight="1"
                 android:paddingLeft="5dp" />
 
-            <com.android.pc.ioc.view.WheelView
+            <kankan.wheel.widget.WheelView
                 android:id="@+id/wv_wheelcity_city"
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1" />
 
-            <com.android.pc.ioc.view.WheelView
+            <kankan.wheel.widget.WheelView
                 android:id="@+id/wv_wheelcity_ccity"
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
