--- a/res/layout/refresh_footer.xml
+++ b/res/layout/refresh_footer.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="@dimen/margin_top_50" >
+        android:layout_marginTop="@dimen/margin_top_50" 
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/mFooterImageView"
