guzman.geng 2015-10-31 小秘书修改   第二次提交

--- a/res/layout/secretary_card_fragment.xml
+++ b/res/layout/secretary_card_fragment.xml
@@ -25,8 +25,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="办卡推荐"
-            android:textColor="@color/app_green1"
-            android:textSize="16sp" />
+            style="@style/text_style_big_40" />
 
         <com.android.pc.ioc.image.RecyclingImageView
             android:layout_width="wrap_content"
