--- a/res/layout/secretary_investment_fragment.xml
+++ b/res/layout/secretary_investment_fragment.xml
@@ -26,8 +26,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="投资理财"
-            android:textColor="@color/app_green1"
-            android:textSize="16sp" />
+            style="@style/text_style_big_40"/>
 
         <com.android.pc.ioc.image.RecyclingImageView
             android:layout_width="wrap_content"
