--- a/res/layout/secretary_student_fragment.xml
+++ b/res/layout/secretary_student_fragment.xml
@@ -25,9 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="16sp"
             android:text="留学移民"
-            android:textColor="@color/app_green1" />
+            style="@style/text_style_big_40" />
 
         <com.android.pc.ioc.image.RecyclingImageView
             android:layout_width="wrap_content"
