guzman.geng 2015-10-31 修改小秘书7大板块的任务设置判断

--- a/res/layout/secretary_life_fragment.xml
+++ b/res/layout/secretary_life_fragment.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:textColor="@color/app_green1"
             android:text="生活娱乐"
             style="@style/text_style_big_40"/>
 
