--- a/res/layout/secretary_shopping_fragment.xml
+++ b/res/layout/secretary_shopping_fragment.xml
@@ -25,6 +25,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="新品购物"
+            android:textColor="@color/app_green1"
             style="@style/text_style_big_40"/>
 
         <com.android.pc.ioc.image.RecyclingImageView
