--- a/res/layout/secretary_student_fragment.xml
+++ b/res/layout/secretary_student_fragment.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:textColor="@color/app_green1"
             android:text="留学移民"
             style="@style/text_style_big_40" />
 
