--- a/res/layout/secretary_travel_fragment.xml
+++ b/res/layout/secretary_travel_fragment.xml
@@ -26,6 +26,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="旅游度假"
+            android:textColor="@color/app_green1"
             style="@style/text_style_big_40"
             />
 
