--- a/res/layout/dialog_setting_secretary.xml
+++ b/res/layout/dialog_setting_secretary.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:gravity="center"
+    android:layout_gravity="center_horizontal"
     android:layout_height="match_parent" >
 
     <LinearLayout
@@ -11,12 +12,11 @@
         android:alpha="50"
         android:background="@drawable/tv_style_white"
         android:orientation="vertical"
-        android:padding="15dp"
         android:layout_centerHorizontal="true"
-        android:paddingBottom="@dimen/bottom_menu_h" >
+        android:paddingBottom="@dimen/margin_top_32" >
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/secretary_setting_dialog_bg" />
 
@@ -26,7 +26,7 @@
             android:text="请先设置您的私人秘书哦"
             android:layout_marginTop="10dp"
             android:textColor="@color/app_green1"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
         <TextView
             style="@style/w_match_h_wrap"
@@ -36,14 +36,16 @@
             android:layout_marginBottom="20dp"
             android:textColor="#a000" />
     </LinearLayout>
-	 <TextView
+    <TextView
         android:id="@+id/setting_now"
+        style="@style/text_style_small_24"
+        android:layout_width="@dimen/expe_btn_w"
+        android:layout_height="@dimen/register_edit_h"
         android:layout_below="@id/liner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/buton_shape"
-        android:layout_marginTop="30dp"
-        android:text="我知道咯"
+        android:layout_marginTop="@dimen/margin_top_35"
+        android:background="@drawable/button"
+        android:text="@string/i_know"
+        android:gravity="center"
         android:textColor="@color/app_white" />
 </RelativeLayout>
