--- a/res/layout/secretary_card_fragment.xml
+++ b/res/layout/secretary_card_fragment.xml
@@ -25,6 +25,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="办卡推荐"
+            android:textColor="@color/app_green1"
             style="@style/text_style_big_40" />
 
         <com.android.pc.ioc.image.RecyclingImageView
