--- a/res/layout/secretary_travel_fragment.xml
+++ b/res/layout/secretary_travel_fragment.xml
@@ -109,7 +109,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="关于任务指派的提问建议"
+                        android:text="@string/ask_question"
                         android:textColor="#AFAFAF" />
 
                     <TextView
