--- a/res/layout/task_dialog.xml
+++ b/res/layout/task_dialog.xml
@@ -34,14 +34,17 @@
             android:layout_marginTop="@dimen/margin_top_35"
             android:src="@drawable/task_success" />
     </LinearLayout>
-
-    <TextView
+<TextView
         android:id="@+id/iknow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/buton_shape"
-        android:layout_marginTop="30dp"
+        style="@style/text_style_small_24"
+        android:layout_width="@dimen/expe_btn_w"
+        android:layout_height="@dimen/register_edit_h"
+        android:layout_below="@id/tishi"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_top_35"
+        android:background="@drawable/button"
         android:text="我知道咯"
+        android:gravity="center"
         android:textColor="@color/app_white" />
 
 </LinearLayout>
