--- a/res/layout/refresh_header.xml
+++ b/res/layout/refresh_header.xml
@@ -3,12 +3,14 @@
     android:id="@+id/mHeaderView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@color/app_bg">
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="@color/app_bg" >
 
         <ImageView
             android:id="@+id/mHeaderImageView"
