--- a/res/layout/activity_activity_detail.xml
+++ b/res/layout/activity_activity_detail.xml
@@ -477,6 +477,11 @@
                 android:layout_height="1px"
                 android:background="@color/line_bg" />
 
+            
+            
+            
+            
+            <!-- 参与此活动的分店 -->
             <RelativeLayout
                 android:id="@+id/iv_activity_detail_join_store"
                 android:layout_width="wrap_content"
@@ -513,6 +518,10 @@
                     android:src="@drawable/arrow_r" />
             </RelativeLayout>
 
+            
+            
+            
+            
             <RelativeLayout
                 android:id="@+id/rl_activity_detail_institution"
                 android:layout_width="wrap_content"
@@ -552,16 +561,24 @@
                     android:src="@drawable/arrow_white" />
             </RelativeLayout>
 
+            <!-- 高度为35px的灰色色块    暂时给gone掉-->
             <View
+                android:visibility="gone"
+                
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/margin_top_35"
                 android:background="#EBEBEB"
                 android:orientation="horizontal" />
 
+            
+            
+            
+            <!-- 迈友评论  这一栏 -->
             <RelativeLayout
                 android:id="@+id/iv_activity_detail_report_list"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/item_h_90" >
+                android:layout_height="@dimen/item_h_90" 
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -595,11 +612,19 @@
                     android:src="@drawable/arrow_r" />
             </RelativeLayout>
 
+            
+            
+            
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-                android:background="@color/line_bg" />
+                android:background="@color/line_bg" 
+                
+                android:visibility="gone"
+               />
 
+            
+            <!-- 暂无 的横栏 -->
             <LinearLayout
                 android:id="@+id/ll_activity_detail_none"
                 android:layout_width="match_parent"
@@ -622,6 +647,7 @@
                 </RelativeLayout>
             </LinearLayout>
 
+            <!-- 评论的列表展示 -->
             <com.lansun.qmyo.view.MySubListView
                 android:id="@+id/lv_comments_list"
                 style="@style/w_wrap_h_wrap"
