--- a/res/layout/activity_activity_tip_item.xml
+++ b/res/layout/activity_activity_tip_item.xml
@@ -11,7 +11,9 @@
         android:layout_marginLeft="@dimen/l_r_35"
         android:layout_marginTop="@dimen/l_r_35"
         android:textColor="#9DC14F" 
-        android:lineSpacingExtra="3dp"/><!--style="@style/text_style_small_24"  -->
+        android:lineSpacingExtra="3dp"
+        
+        /><!--style="@style/text_style_small_24"  -->
 
     <TextView
         android:id="@+id/tv_activity_content_mx_content"
@@ -20,7 +22,9 @@
         android:layout_marginRight="@dimen/l_r_35"
         android:layout_marginTop="@dimen/margin_top_15"
         android:textColor="#6F6F6F" 
-        android:lineSpacingExtra="3dp"/>
+        android:lineSpacingExtra="3dp"
+        android:textIsSelectable="true"
+        android:autoLink="all"/>
 
     <View
         android:id="@+id/line"
