--- a/res/layout/activity_edit_user_address.xml
+++ b/res/layout/activity_edit_user_address.xml
@@ -86,5 +86,11 @@
         android:gravity="center"
         android:text="@string/ok"
         android:textColor="@color/app_white" />
+    
+    <FrameLayout 
+        android:layout_height="wrap_content" 
+        android:layout_width="wrap_content" 
+        android:id="@+id/fl_data"> 
+    </FrameLayout>
 
 </LinearLayout>
