--- a/res/layout/activity_mine.xml
+++ b/res/layout/activity_mine.xml
@@ -199,7 +199,10 @@
                 android:layout_alignParentBottom="true"
                 android:background="@color/line_bg" />
 
+            <!-- 暂时将我的评论关闭掉 -->
             <LinearLayout
+                android:visibility="gone"
+                
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/app_white" >
@@ -242,6 +245,8 @@
             </LinearLayout>
 
             <View
+                android:visibility="gone"
+                
                 android:layout_width="match_parent"
                 android:layout_height="1px"
                 android:layout_alignParentBottom="true"
