--- a/res/layout/activity_mine_store.xml
+++ b/res/layout/activity_mine_store.xml
@@ -98,7 +98,7 @@
 				            android:layout_marginTop="10dp"
 				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:text="您关注门店中暂无过期活动"/>
+				            android:text="暂无相关门店活动"/>
 				        
 		         </LinearLayout>
 		    </RelativeLayout>
