--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -7,10 +7,10 @@
 
     
     <!-- 云图被压在最底下作为背景图 -->
-    <com.lansun.qmyo.view.CloudView
+    <!-- <com.lansun.qmyo.view.CloudView
         android:id="@+id/iv_register_bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" /> -->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -159,8 +159,8 @@
                         android:password="true"
                         android:singleLine="true"
                         android:textColor="@color/text_nomal"
-                        android:textColorHint="@color/line_bg"
-                         />
+                        android:textColorHint="@color/line_bg"/>
+                    
                 </RelativeLayout>
             </FrameLayout>
 
