--- a/res/layout/activity_mine.xml
+++ b/res/layout/activity_mine.xml
@@ -126,16 +126,13 @@
                                     android:background="@drawable/message" />
 
                                 <TextView
-                                    android:id="@+id/tv_mine_message_center"
-                                    style="@style/text_style_small_26"
-                                    android:layout_alignParentTop="true"
-                                    android:layout_alignRight="@id/meggage_icon2"
-                                    android:layout_centerVertical="true"
-                                    android:background="@drawable/circle_background_red"
-                                    android:ellipsize="end"
-                                    android:gravity="center"
-                                    android:textColor="@color/app_white"
-                                    android:visibility="gone" />
+                                    android:id="@+id/have_information"
+                                    android:layout_width="15dp"
+                                    android:layout_height="15dp"
+                                    android:visibility="gone"
+                                    android:layout_marginLeft="-20dp"
+                                    android:layout_toRightOf="@id/meggage_icon2"
+                                    android:background="@drawable/circle_shape_infor_center" />
                             </RelativeLayout>
 
                             <TextView
@@ -172,6 +169,7 @@
                         android:src="@drawable/private_secretary_1" />
 
                     <TextView
+                        android:id="@+id/title"
                         style="@style/text_style_nomal_28"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/l_r_14"
@@ -180,16 +178,13 @@
                         android:textColor="@color/text_gray1" />
 
                     <TextView
-                        android:id="@+id/tv_mine_secretary_message"
-                        style="@style/text_style_small_26"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignTop="@id/tv_message_item_desc"
+                        android:id="@+id/have_secretary"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:visibility="gone"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/circle_background_red"
-                        android:ellipsize="end"
-                        android:gravity="center"
-                        android:textColor="@color/app_white"
-                        android:visibility="gone" />
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/circle_shape_infor_center" />
                 </RelativeLayout>
             </LinearLayout>
 
