--- a/res/layout/activity_mine_secretary.xml
+++ b/res/layout/activity_mine_secretary.xml
@@ -7,7 +7,6 @@
 
     <include layout="@layout/activity_com" />
 
-
     <com.lansun.qmyo.view.ExpandTabView
         android:id="@+id/exp_mine_secretary"
         android:layout_width="match_parent"
@@ -16,13 +15,47 @@
 
     <View style="@style/line_style_1" />
 
-    <com.lansun.qmyo.view.MyListView
-        android:id="@+id/lv_secretary_list"
-        style="@style/w_h_full"
-          android:layout_marginTop="@dimen/margin_top_35"
-        android:cacheColorHint="#00000000"
-        android:divider="@null"
-        android:listSelector="@android:color/transparent"
-        android:scrollbars="none" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
+        <LinearLayout
+            android:id="@+id/empty_liner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:background="#EBEBEB"
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/bt_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_top_30"
+                android:src="@drawable/lv_empty" />
+
+            <TextView
+                android:id="@+id/look_help"
+                style="@style/text_style_nomal_28"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/margin_top_20"
+                android:text="@string/secretary_empty_title"
+                android:textColor="@color/app_green1" />
+        </LinearLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swiperefresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/margin_top_35" >
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/lv_secretary_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#EBEBEB"
+                android:scrollbars="none" >
+            </android.support.v7.widget.RecyclerView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </FrameLayout>
 </LinearLayout>
