--- a/res/layout/activity_secretary_question_detail.xml
+++ b/res/layout/activity_secretary_question_detail.xml
@@ -1,66 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/w_h_full" >
-
+    style="@style/w_match_h_match" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/ll_mai_comment_reply"
         android:background="@color/app_bg"
         android:orientation="vertical" >
-
         <include layout="@layout/activity_com" />
 
         <TextView
             android:id="@+id/tv_mine_secretary_type"
-            style="@style/text_style_nomal_28"
+            style="@style/text_style_small_24"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_top_35"
-            android:text="旅游"
+            android:gravity="center"
+            android:background="@drawable/my_question_btn_shape"
             android:textColor="@color/text_gray3" />
 
-        <com.lansun.qmyo.view.MyListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_mine_secretary_quetions_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/margin_top_35"
-            android:cacheColorHint="@android:color/transparent"
-            android:divider="@null"
-            android:listSelector="@android:color/transparent" />
+            android:layout_marginTop="@dimen/margin_top_17"
+            />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_mai_comment_reply"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/reply_h"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#DBDBDB"
         android:gravity="center_vertical"
+        android:paddingLeft="@dimen/margin_top_10"
         android:orientation="horizontal" >
 
-        <EditText
+         <EditText
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:hint="@string/pump"
+            android:textSize="14sp"
+            android:padding="@dimen/margin_top_20"
+            android:textCursorDrawable="@null"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_top_10"
+            android:maxLines="6"
+            android:lineSpacingExtra="4dp"
             android:id="@+id/et_secretary_question"
-            style="@style/text_style_nomal_28"
-            android:layout_width="@dimen/et_reply_w"
-            android:layout_height="@dimen/et_reply_h"
-            android:layout_marginLeft="@dimen/l_r_20"
-            android:background="@drawable/tv_style_white"
-            android:focusable="true"
-            android:hint="@string/reply"
-            android:imeOptions="actionDone"
-            android:paddingLeft="@dimen/l_r_25"
-            android:textColor="#6F6F6F"
-            android:textCursorDrawable="@null" />
-
-        <Button
+            android:background="@drawable/cicle_back_talk_detail_send"
+            />
+        <TextView
             android:id="@+id/btn_secretary_question_commit"
-            style="@style/text_style_nomal_28"
-            android:layout_width="@dimen/btn_reply_w"
-            android:layout_height="@dimen/btn_reply_h"
-            android:layout_marginLeft="@dimen/l_r_10"
-            android:layout_marginRight="@dimen/l_r_25"
-            android:background="@drawable/tv_style_green"
-            android:text="@string/send"
-            android:textColor="@color/app_white" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="发送"
+            android:textSize="12sp"
+            android:textColor="#fff"
+            android:layout_gravity="center"
+            android:padding="@dimen/margin_top_15"
+            android:background="@drawable/send_shape"
+            android:layout_marginRight="@dimen/margin_top_20"
+            />
     </LinearLayout>
 
 </RelativeLayout>
