--- a/res/layout/activity_secretary_question_detail_item.xml
+++ b/res/layout/activity_secretary_question_detail_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/w_wrap_h_wrap"
+    style="@style/w_match_h_match"
     android:orientation="vertical" >
 
     <RelativeLayout
+        android:background="#EBEBEB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/l_r_35"
@@ -21,25 +22,25 @@
 
             <com.lansun.qmyo.view.CircularImage
                 android:id="@+id/iv_user_head"
+                android:background="@color/app_green1"
+                android:src="@drawable/default_avatar"
                 style="@style/secretary_head_small_80" />
         </LinearLayout>
 
         <com.lansun.qmyo.view.TextPage
             android:id="@+id/tv_user_question"
             style="@style/text_style_nomal_28"
-            android:layout_marginLeft="@dimen/l_r_35"
+            android:layout_marginLeft="@dimen/store_detail_head_h"
             android:layout_toLeftOf="@id/ll_user_head"
             android:background="@drawable/secretary_user_dialog"
             android:gravity="center_vertical"
             android:paddingRight="@dimen/l_r_50"
             android:textColor="@color/text_black_1"
-            
             android:longClickable="true"
             android:linksClickable="true"
             android:autoLink="all"
             android:textIsSelectable="true"
             android:cursorVisible="true"
-            
              />
     </RelativeLayout>
 
@@ -74,15 +75,12 @@
             android:paddingLeft="@dimen/l_r_50"
             android:paddingRight="@dimen/l_r_35"
             android:textColor="@color/text_black_2" 
-            
             android:longClickable="true"
+            android:layout_marginRight="@dimen/store_detail_head_h"
             android:linksClickable="true"
             android:autoLink="web"
             android:textIsSelectable="true"
             android:cursorVisible="true"
             />
-
-       
     </RelativeLayout>
-
 </LinearLayout>
