--- a/res/layout/secretary_life_fragment.xml
+++ b/res/layout/secretary_life_fragment.xml
@@ -83,7 +83,7 @@
                     android:gravity="center_vertical"
                     android:layout_toRightOf="@id/ll_user_head2"
                     android:layout_marginLeft="10dp"
-                    android:text="习大大，根据您提出的预算、需求/兴趣点、时间等其他必要需求，提供关于生活娱乐相关生活兴趣课堂、周末娱乐消遣、家政服务、私人医生保健等专业对接人联系人或资讯。"
+                    android:text="根据您提出的预算、需求/兴趣点、时间等其他必要需求，提供关于生活娱乐相关生活兴趣课堂、周末娱乐消遣、家政服务、私人医生保健等专业对接人联系人或资讯。"
                     android:textColor="@color/text_black_2" />
             </RelativeLayout>
 
