--- a/res/layout/secretary_shopping_fragment.xml
+++ b/res/layout/secretary_shopping_fragment.xml
@@ -83,7 +83,7 @@
                     android:gravity="center_vertical"
                     android:layout_toRightOf="@id/ll_user_head2"
                     android:layout_marginLeft="10dp"
-                    android:text="习大大，根据您提出的品牌、产品类型、型号、预算等其他必要需求，提供关于购物相关境内外产品购买渠道、限量藏品资讯、造型买手服务等专业对接人联系人或资讯。"
+                    android:text="根据您提出的品牌、产品类型、型号、预算等其他必要需求，提供关于购物相关境内外产品购买渠道、限量藏品资讯、造型买手服务等专业对接人联系人或资讯。"
                     android:textColor="@color/text_black_2" />
             </RelativeLayout>
 
